The height but has somehow been magically fixed. Horizontal scroll works ish.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 html, body {
-  height:100%;
+  height: 100%;
   background-color: #FFF7E9;
   font-family: Open Sans, Arial, sans-serif;
   font-size: 14px;
@@ -9,15 +9,31 @@ html, body {
   font-weight: 400;
 }
 
+.container-fluid {
+  height: 100%;
+  width: 100%;
+}
+
+/* Horizontal scroll, that works ish
+#main-content > .row {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}    
+
+#main-content > .row [class*="col-lg"], #main-content > .row [class*="col-md"], #main-content > .row [class*="col-sm"] {
+  float: none;
+  display: inline-block;
+}*/
+
 .dayview, ng-include, #days, #main {
   height: 100%;
   width: 100%;
 }
 
 .dayview-info, #parkedActivityHeader {
-  margin-top: 10px;
-  height: 10%;
-  margin-bottom: 20px;
+  padding-top: 10px;
+  height: 12%;
 }
 
 #parkedActivityHeader, #new-day {
@@ -35,21 +51,14 @@ td{
   font-weight: 600;
 }
 
-.glyphicon-pencil {
-  float: right;
-}
-
 .dayview-main, #parkedActivityList {
   min-height: 20%;
-  max-height: 90%;
+  max-height: calc(88%-10px);
+  //height: calc(88% - 10px);
   border-radius: 5px;
   background-color: #FFF;
   padding: 10px;
-}
-
-.container-fluid {
-  height: 90%;
-  width: 100%;
+  margin-bottom: 10px;
 }
 
 .activityGraphics {
